--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>About</title>
+  <title>About | AMERIA</title>
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,61 +13,151 @@
 </head>
 
 <body>
-  <div class="center-vertical" bg-dark>
-    <div class="about-us-section bf-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-            <div class="img-head">
-              <img src="../img/couple-hiking-mountain-climbing-1296x728-header.webp" alt="" />
-            </div>
-          </div>
-          <div class="col-12 col-lg-6">
-            <h2 class="text-head">KNOW MORE ABOUT US</h2>
-            <div class="break-small mb-2"></div>
-            <p class="text-para">
-              AMERIA is hiking tour that immerse you in the Azerbaijan's
-              mountain landscapes. You can expect to be physically active on
-              each day of our trips so they’re perfect for any physically fit
-              person who delights in the challenge of a mountain trail. After
-              more than two decades of leading trips in the mountains, we know
-              that magic happens on the trail. Together we build splendid
-              memories that last a lifetime, memories that continue to inspire
-              and rejuvenate long after the actual experience of travel is
-              over. This year, please consider joining us in the mountains.
-              Our trips may not be for everyone, but we hope they’re right for
-              you! Ready to hike? We’d love the pleasure of your company! This
-              year, please consider joining us in the mountains. Our trips may
-              not be for everyone, but we hope they’re right for you! Ready to
-              hike? We’d love the pleasure of your company!
-            </p>
+  <main>
+    <section id="about">
+      <div class="center-vertical">
+        <div class="about-us-section bf-light">
+          <div class="container">
             <div class="row">
-              <div class="col-12 col-md-4 mb-2 mb-md-0">
-                <div class="box">
-                  <i class="bi bi-person"></i>
-                  <h4 class="mb-0">Total clients</h4>
-                  <p class="mb-0">1560</p>
+              <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+                <div class="img-head">
+                  <img src="../img/couple-hiking-mountain-climbing-1296x728-header.webp" alt="" />
                 </div>
               </div>
-              <div class="col-12 col-md-4 mb-2 mb-md-0">
-                <div class="box">
-                  <i class="bi bi-calendar"></i>
-                  <h4 class="mb-0">Working years</h4>
-                  <p class="mb-0">18</p>
-                </div>
-              </div>
-              <div class="col-12 col-md-4 mb-2 mb-md-0">
-                <div class="box">
-                  <i class="bi bi-award-fill"></i>
-                  <h4 class="mb-0"> Our employees</h4>
-                  <p class="mb-0">105</p>
+              <div class="col-12 col-lg-6">
+                <h2 class="text-head">KNOW MORE ABOUT US</h2>
+                <div class="break-small mb-2"></div>
+                <p class="text-para">
+                  AMERIA is hiking tour that immerse you in the Azerbaijan's
+                  mountain landscapes. You can expect to be physically active on
+                  each day of our trips so they’re perfect for any physically fit
+                  person who delights in the challenge of a mountain trail. After
+                  more than two decades of leading trips in the mountains, we know
+                  that magic happens on the trail. Together we build splendid
+                  memories that last a lifetime, memories that continue to inspire
+                  and rejuvenate long after the actual experience of travel is
+                  over. This year, please consider joining us in the mountains.
+                  Our trips may not be for everyone, but we hope they’re right for
+                  you! Ready to hike? We’d love the pleasure of your company! This
+                  year, please consider joining us in the mountains. Our trips may
+                  not be for everyone, but we hope they’re right for you! Ready to
+                  hike? We’d love the pleasure of your company!
+                </p>
+                <div class="row">
+                  <div class="col-4 col-md-4 mb-2 mb-md-0">
+                    <div class="box">
+                      <i class="bi bi-person"></i>
+                      <h4 class="mb-0">Total clients</h4>
+                      <p class="mb-0">1560</p>
+                    </div>
+                  </div>
+                  <div class="col-4 col-md-4 mb-2 mb-md-0">
+                    <div class="box">
+                      <i class="bi bi-calendar"></i>
+                      <h4 class="mb-0">Working years</h4>
+                      <p class="mb-0">18</p>
+                    </div>
+                  </div>
+                  <div class="col-4 col-md-4 mb-2 mb-md-0">
+                    <div class="box">
+                      <i class="bi bi-award-fill"></i>
+                      <h4 class="mb-0"> Our employees</h4>
+                      <p class="mb-0">105</p>
 
+                    </div>
+                    <button type="button" class="btn btn-outline-success my-3 mx-3 my-button">Read more</button>
+                  </div>
                 </div>
-                <button type="button" class="btn btn-outline-success my-3 mx-3 ">Read more</button>
               </div>
             </div>
           </div>
         </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <section class="footer">
+      <div class="container">
+        <div class="row gx-5 text-center align-items-center">
+          <div class="col-12 my-3 join">
+            <h2 class="text-white footer-text">AMERIA</h2>
+            <hr>
+          </div>
+
+          <div class="col-12 my-1 text-span">
+            <span>Subscribe To Our Newsletter</span>
+          </div>
+
+          <!-- col-sm-12 col-md-12 col-xl-12 col-xxl-12 col-lg-12 => lazim olsa -->
+          <!-- <div class="col-12 my-5 input text-center align-items-center">
+                          <input type="text" placeholder="Email" autocomplete="off" name="email" id="Email">
+                          <label for="email"><button class="text-white email-button" content: '\2192'></button></label>
+                       </div> -->
+
+          <div class="col-12  my-4 input-group input">
+            <input type="text" class="form-control" placeholder="Email" aria-label="Email"
+              aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <span class="input-group-text text-white arrow-span" id="basic-addon2"><i
+                  class="bi bi-arrow-right"></i></span>
+            </div>
+          </div>
+
+          <div class="col-12 my-4 footer-main">
+            <div class="row gy-3">
+              <a href="#about-us" class="col-sm-4 col-lg-2">About Us</a>
+              <a href="#benefits" class="col-sm-4 col-lg-2">Benefits</a>
+              <a href="#hikes" class="col-sm-4 col-lg-2">Hikes</a>
+              <a href="#stories" class="col-sm-4 col-lg-2">Stories</a>
+              <a href="#contact" class="col-sm-4 col-lg-2">Contact</a>
+              <a href="#privacy-policy" class="col-sm-4 col-lg-2">Terms</a>
+            </div>
+          </div>
+          <hr>
+          <div class="col-12 my-1 text-center align-items-center">
+
+            <div class="mb-3 community">
+              <span class="text-white">Community</span>
+            </div>
+
+            <ul class="footer-social-icons">
+
+              <li>
+                <i class="bi bi-twitter"></i>
+              </li>
+
+              <li>
+                <i class="bi bi-facebook"></i>
+              </li>
+
+              <li>
+                <i class="bi bi-linkedin"></i>
+              </li>
+
+              <li>
+                <i class="bi bi-instagram"></i>
+              </li>
+            </ul>
+
+            <div class="info-about-site mt-5">
+              <span class="text-white">Ameria is optimized for traveling and getting
+                to know the world better. Ameria is constantly
+                reviewed to avoid errors in ticket prices, offers,
+                or any part, but we cannot guarantee the accuracy of
+                all content. <br> By using Ameia, you read and agree to our
+                terms of use and privacy policy.</span>
+            </div>
+            <div class="info-about-site mt-3">
+              <span class="text-white">
+                Copyright 2022 by Refsnes Data. All Rights Reserved.
+              </span>
+            </div>
+            <img class="footer-logo" src="../img/Logo.png">
+          </div>
+        </div>
+      </div>
+    </section>
+  </footer>
 </body>
 
 </html>
