--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -74,7 +74,7 @@
                                     <div
                                         class="col-3 icon-holder d-flex justify-content-center align-items-center mx-2">
                                         <a class="yt d-flex justify-content-center align-items-center"><i
-                                                class="bi bi-youtube"></i></a>
+                                                class="bi bi-linkedin"></i></a>
                                     </div>
                                     <div
                                         class="col-3 icon-holder d-flex justify-content-center align-items-center ms-2 ">
