header ve footer her section ucun ayrica olaraq qeyd olundu, sectionlar elaqelendirildi. about hissesi ucun elave olaraq readmore html yaradildi ve elaqelendirildi.

--- a/assets/pages/hikes.html
+++ b/assets/pages/hikes.html
@@ -27,17 +27,48 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
 
-    <title>Hikes|AMERIA</title>
+    <title>Ameria | Azerbaijan</title>
 </head>
 
 <body>
 
-    <nav id="nav">
+    <!-- HEADER - NAV -->
+    <header>
         <div class="container">
-
+            <div class="row d-flex align-items-center">
+                <div class="col-6 col-lg-4 logo">
+                    <a href="../../index.html">AMERIA</a>
+                </div>
+                <div class="col-6 col-lg-8 side-menu d-flex justify-content-end">
+                    <div class="side-menu-toggle">
+                        <i class="bi bi-list open-btn"></i>
+                        <i class="bi bi-x-lg close-btn"></i>
+                    </div>
+                    <nav class="hidden">
+                        <ul>
+                            <li><a href="../../index.html">Home</a></li>
+                            <li><a href="../pages/about.html">About</a></li>
+                            <li><a href="../pages/contact.html">Contact</a></li>
+                            <li><a href="../pages/hikes.html">Hikes</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
-    </nav>
+    </header>
 
+    <!-- HERO -->
+    <section id="hero" style="background-image: url('../img/hikes.jpeg');">
+        <div class="cover"></div>
+        <div class="container">
+            <div class="hero-content">
+                <p>Hikes</p>
+                <h1>Lorem, ipsum dolor <br> sit amet</h1>
+            </div>
+        </div>
+    </section>
+
+    <!--  -->
     <section id="hikes">
 
         <div class="container">
@@ -185,26 +216,19 @@
 
     </section>
 
-
-    <!-- footer -->
+    <!-- FOOTER -->
     <footer>
         <section class="footer">
             <div class="container">
                 <div class="row gx-5 text-center align-items-center">
-                    <div class="col-12 my-3 join">
-                        <h2 class="text-white footer-text">AMERIA</h2>
-                        <hr>
-                    </div>
 
+                    <div class="col-12 mb-3 join">
+                        <h2 class="text-white footer-text">AMERIA</h2>
+                    </div>
+                    <hr>
                     <div class="col-12 my-1 text-span">
                         <span>Subscribe To Our Newsletter</span>
                     </div>
-
-                    <!-- col-sm-12 col-md-12 col-xl-12 col-xxl-12 col-lg-12 => lazim olsa -->
-                    <!-- <div class="col-12 my-5 input text-center align-items-center">
-                        <input type="text" placeholder="Email" autocomplete="off" name="email" id="Email">
-                        <label for="email"><button class="text-white email-button" content: '\2192'></button></label>
-                     </div> -->
 
                     <div class="col-12  my-4 input-group input">
                         <input type="text" class="form-control" placeholder="Email" aria-label="Email"
@@ -216,13 +240,10 @@
                     </div>
 
                     <div class="col-12 my-4 footer-main">
-                        <div class="row gy-3">
-                            <a href="#about-us" class="col-sm-4 col-lg-2">About Us</a>
-                            <a href="#benefits" class="col-sm-4 col-lg-2">Benefits</a>
-                            <a href="#hikes" class="col-sm-4 col-lg-2">Hikes</a>
-                            <a href="#stories" class="col-sm-4 col-lg-2">Stories</a>
-                            <a href="#contact" class="col-sm-4 col-lg-2">Contact</a>
-                            <a href="#privacy-policy" class="col-sm-4 col-lg-2">Terms</a>
+                        <div class="row gy-3 d-flex align-items-center justify-content-center">
+                            <a href="./about.html" class="col-sm-4 col-lg-2">About Us</a>
+                            <a href="./hikes.html" class="col-sm-4 col-lg-2">Hikes</a>
+                            <a href="./contact.html" class="col-sm-4 col-lg-2">Contact</a>
                         </div>
                     </div>
                     <hr>
@@ -271,10 +292,9 @@
         </section>
     </footer>
 
-
-
     <!-- js -->
-    <script src="./assets/js/script.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/header.js"></script>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
