--- a/assets/pages/about-readmore.html
+++ b/assets/pages/about-readmore.html
@@ -58,114 +58,54 @@
     </header>
 
     <!-- HERO -->
-    <section id="hero" style="background-image: url('../img/contact.webp');">
+    <section id="hero" style="background-image: url('../img/hikes.jpeg');">
         <div class="cover"></div>
         <div class="container">
             <div class="hero-content">
-                <p>Contact us</p>
                 <h1>Lorem, ipsum dolor <br> sit amet</h1>
             </div>
         </div>
     </section>
 
     <!--  -->
-    <section id="contact" class="py-5">
-        <div class="container py-5 my-5">
-            <div class="row gx-5 d-flex justify-content-center my-3 py-3">
-                <div class="col-lg-6 col-xl-6 col-xxl-6 col-sm-12">
-                    <div class="container contact-left px-0 mb-5">
-                        <label class="switch mt-4 mb-5">
-                            <input type="checkbox" class="clicker">
-                            <span class="slider round"></span>
-                        </label>
-                        <div class="map px-5">
-                            <span><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Garden</span>
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1914.6297823171155!2d49.84811202996307!3d40.38037160412463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307debe542010b%3A0x4a5deb4b109012d6!2sTur!5e0!3m2!1sen!2s!4v1652009640655!5m2!1sen!2s"
-                                style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade" class="mt-2"></iframe>
-                        </div>
-                        <div class="head-text ">
-                            <span>Hey there</span>
-                            <h2>Let's Get In Touch</h2>
-                        </div>
-                        <div class="contact-info ">
-                            <ul class="px-0">
-                                <li class="my-5"><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Garden</li>
-                                <li class="my-5"><i class="bi bi-envelope me-4"></i> ameria@gmail.com</li>
-                                <li class="my-5"><i class="bi bi-telephone me-4"></i> (308) 555-0121</li>
-                            </ul>
-                        </div>
-                        <div class="socials ps-3 ">
-                            <div class="row">
-                                <div
-                                    class="col-3 icon-holder d-flex justify-content-center align-items-center me-2">
-                                    <a class="fb d-flex justify-content-center align-items-center"><i
-                                            class="bi bi-facebook"></i></a>
-                                </div>
-                                <div
-                                    class="col-3 icon-holder d-flex justify-content-center align-items-center mx-2">
-                                    <a class="ig d-flex justify-content-center align-items-center"><i
-                                            class="bi bi-instagram"></i></a>
-                                </div>
-                                <div
-                                    class="col-3 icon-holder d-flex justify-content-center align-items-center mx-2">
-                                    <a class="yt d-flex justify-content-center align-items-center"><i
-                                            class="bi bi-linkedin"></i></a>
-                                </div>
-                                <div
-                                    class="col-3 icon-holder d-flex justify-content-center align-items-center ms-2 ">
-                                    <a class="tw d-flex justify-content-center align-items-center"><i
-                                            class="bi bi-twitter"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-xl-6 col-xxl-6 col-sm-12">
-                    <div class="container contact-right py-5">
-                        <form action="">
-                            <h2 class="mb-4">Contact Us</h2>
+    <section id="other">
+        <div class="container">
 
-                            <div class="form-input mb-2">
-                                <input type="text" name="name" class="pt-5" required>
-                                <label for="name" class="label-name">
-                                    <span class="content-name">Full Name</span>
-                                </label>
-                            </div>
-                            <div class="form-input mb-2">
-                                <input type="text" name="email" class="pt-5" required>
-                                <label for="email" class="label-name">
-                                    <span class="content-name">Email</span>
-                                </label>
-                            </div>
-                            <div class="form-area mb-4 mt-3">
-                                <textarea class="" id="exampleFormControlTextarea1" rows="3" required
-                                    name="area"></textarea>
-                                <label for="area" class="label-text">
-                                    <span class="content-text">Message ......</span>
-                                </label>
-                            </div>
-
-                            <!-- <div class="mb-3">
-                                <input type="text" class="form-control form-element px-4"
-                                    id="exampleFormControlInput1" placeholder="Full Name">
-                            </div>
-                            <div class="mb-3">
-                                <input type="email" class="form-control form-element px-4"
-                                    id="exampleFormControlInput1" placeholder="Email">
-                            </div>
-                            <div class="mb-3">
-                                <textarea class="form-control form-element px-4" id="exampleFormControlTextarea1"
-                                    rows="4" placeholder="Message ......"></textarea>
-                            </div> -->
-                            <div class="d-grid gap-2">
-                                <button class="btn sub-btn" type="submit">Submit</button>
-                            </div>
-                        </form>
-                    </div>
+            <div class="row">
+                <div class="text-center other-header">
+                    <h1>About us</h1>
+                    <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fugit animi eveniet unde
+                        libero adipisci expedita esse iusto minima, aliquid exercitationem enim est saepe eos quos
+                        perferendis temporibus id, ea, dolore ad veniam facilis. Distinctio et quod atque harum labore
+                        cum aliquam dicta expedita corrupti exercitationem est cupiditate modi quisquam officia numquam,
+                        laboriosam impedit a iusto possimus? Beatae a voluptatibus, iusto placeat, laboriosam voluptatem
+                        tempora eos cupiditate labore, fuga dignissimos ex fugit voluptatum necessitatibus sunt illum.
+                        Vel excepturi magnam harum iusto doloribus, dicta in voluptatibus laborum, enim, cum ullam et
+                        error est perspiciatis reprehenderit dolorum obcaecati rerum veritatis. 
+                        <br><br>
+                        Fugit ex eaque veritatis
+                        voluptas maxime cumque! Debitis, eligendi minima porro accusamus eos ut repudiandae vel
+                        accusantium architecto, maxime aliquam ad quam quaerat vitae cum similique veritatis excepturi
+                        est qui eveniet? Facere est reiciendis dicta corrupti maxime debitis quos cupiditate modi nisi
+                        consectetur animi aut fugit, repellat non maiores culpa voluptates obcaecati.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fugit animi eveniet unde
+                        libero adipisci expedita esse iusto minima, aliquid exercitationem enim est saepe eos quos
+                        perferendis temporibus id, ea, dolore ad veniam facilis. Distinctio et quod atque harum labore
+                        cum aliquam dicta expedita corrupti exercitationem est cupiditate modi quisquam officia numquam,
+                        laboriosam impedit a iusto possimus? Beatae a voluptatibus, iusto placeat, laboriosam voluptatem
+                        tempora eos cupiditate labore, fuga dignissimos ex fugit voluptatum necessitatibus sunt illum.
+                        Vel excepturi magnam harum iusto doloribus.
+                        <br><br><br>
+                        Dicta in voluptatibus laborum, enim, cum ullam et
+                        error est perspiciatis reprehenderit dolorum obcaecati rerum veritatis. Fugit ex eaque veritatis
+                        voluptas maxime cumque! Debitis, eligendi minima porro accusamus eos ut repudiandae vel
+                        accusantium architecto, maxime aliquam ad quam quaerat vitae cum similique veritatis excepturi
+                        est qui eveniet? Facere est reiciendis dicta corrupti maxime debitis quos cupiditate modi nisi
+                        consectetur animi aut fugit, repellat non maiores culpa voluptates obcaecati.
+                    </p>
                 </div>
             </div>
+
         </div>
     </section>
 
@@ -238,7 +178,7 @@
                                 Copyright 2022 by Refsnes Data. All Rights Reserved.
                             </span>
                         </div>
-                        <img class="footer-logo" src="../img/Logo.png">
+                        <img class="footer-logo" src="../img/logo.png" alt="logo">
                     </div>
                 </div>
             </div>
@@ -247,7 +187,6 @@
 
     <!-- js -->
     <script src="../js/script.js"></script>
-    <script src="../js/contact.js"></script>
     <script src="../js/header.js"></script>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
